--- a/materiales.html
+++ b/materiales.html
@@ -183,29 +183,35 @@
       <div class="left box">
         <h2>Nosotros</h2>
         <div class="content">
-          <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo">
+          <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur facere, accusantium deleniti eos sint
-            incidunt corporis porro officiis in nesciunt!
+            TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR TRABAJOS EN TODO EL TERRITORIO NACIONAL
           </p>
           <div class="social">
-            <a target="_blank" href="#"><span class="fab fa-facebook-f"></span></a>
-            <a target="_blank" href="#"><span class="fab fa-instagram"></span></a>
-            <a target="_blank" href="#"><span class="fab fa-youtube"></span></a>
+            <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
+              ><span class="fab fa-facebook-f"></span
+            ></a>
+            <a target="_blank" href="https://www.instagram.com/cizzsc/?hl=es"
+              ><span class="fab fa-instagram"></span
+            ></a>
+            <!-- <a target="_blank" href="#"
+              ><span class="fab fa-youtube"></span
+            ></a> -->
           </div>
         </div>
       </div>
-
 
       <div class="center box">
         <div class="center box">
           <h2>Servicios</h2>
           <div class="content">
             <ul>
-              <li>Estructuras</li>
-              <li>Instalaciones</li>
-              <li>Pisos</li>
               <li>Cubiertas</li>
+              <li>Pisos</li>
+              <li>Extructuras</li>
+              <li>Especiales</li>
+              <li>Venta de materiales </li>
+              <li>Asesorias</li>
             </ul>
           </div>
         </div>
@@ -216,24 +222,26 @@
         <div class="content">
           <div class="place">
             <span class="fas fa-map-marker-alt"></span>
-            <span class="text">Ciudad de Puebla</span>
+            <span class="text">Puebla-Mexico</span>
           </div>
           <div class="phone">
             <span class="fas fa-phone-alt"></span>
-            <span class="text">222 16922167</span>
+            <span class="text">222 887 6042</span>
           </div>
           <div class="email">
             <span class="fas fa-envelope"></span>
-            <span class="text">aclientes@cizzsolucionesconstructuvas.com</span>
+            <span class="text"
+              >aclientes@cizzsolucionesconstructivas.com</span
+            >
           </div>
         </div>
       </div>
-
     </div>
     <div class="bottom">
       <center>
         <span class="credit"> Juan Florez <a href="#">PymeCode</a> | </span>
-        <span class="far fa-copyright"></span><span> 2021 Todos los derechos reservados.</span>
+        <span class="far fa-copyright"></span
+        ><span> 2021 Todos los derechos reservados.</span>
       </center>
     </div>
   </footer>
