--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
             trabajo donde de manera conjunta se busquen las soluciones adecuadas
             a cada caso, beneficiando al cliente por supuesto y también a
             nosotros como empresa.
-            <br />
+            <br /> <br>
             Este proyecto se construyó por experiencias propias y derivado de la
             necesidad de tener un respaldo en momentos de contrariedad, donde no
             solo se busca un vendedor sino un colaborador que nos facilite
@@ -107,7 +107,7 @@
         </div>
 
         <div class="misionimg">
-          <img src="/img/Mision.jpg" alt="Mision" />
+          <img src="/img/Vision.jpg" alt="Mision" />
         </div>
       </div>
     </section>
@@ -118,19 +118,19 @@
           <div class="v-icono">
             <img class="imgValor" src="/img/iconotras.png" alt="transparecia" />
             <h5>Transaparecia</h5>
-            <p>Claridad en nuestros negocios y acuerdos</p>
+            <p>Claridad en nuestros negocios y acuerdos.</p>
           </div>
           <div class="v-icono">
             <img class="imgValor" src="/img/iconoing.png" alt="resolucion" />
             <h5>Resolución</h5>
-            <p>Buscar siempre la mejor propuesta para nuestros clientes</p>
+            <p>Buscar siempre la mejor propuesta para nuestros clientes.</p>
           </div>
           <div class="v-icono">
             <img class="imgValor" src="/img/iconocalidad.png" alt="calidad" />
             <h5>Excelencia</h5>
             <p>
-              Calidad en todos nuestros materiales y servicios. Colaboramos sólo
-              con los mejores proveedores
+              Calidad en todos nuestros materiales y servicios. Colaboramos solo
+              con los mejores proveedores.
             </p>
           </div>
         </div>
@@ -149,16 +149,7 @@
       <i class="fa fa-whatsapp my-float"></i>
     </a>
 
-    <section>
-      <div class="somos valores Contenedor">
-        <div>
-          <p>
-            TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR
-            TRABAJOS EN TODO EL TERRITORIO NACIONAL
-          </p>
-        </div>
-      </div>
-    </section>
+    
 
     <footer>
       <div class="main-content">
@@ -167,7 +158,9 @@
           <div class="content">
             <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
             <p>
-              TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR TRABAJOS EN TODO EL TERRITORIO NACIONAL
+            
+              Tenemos la capacidad de suministrar cualquier material y realizar trabajos en todo el territorio
+              nacional.
             </p>
             <div class="social">
               <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
@@ -190,10 +183,10 @@
               <ul>
                 <li>Cubiertas</li>
                 <li>Pisos</li>
-                <li>Extructuras</li>
-                <li>Especiales</li>
+                <li>Estructuras</li>
+                <li> Instalaciones especiales</li>
                 <li>Venta de materiales </li>
-                <li>Asesorias</li>
+                <li>Asesorías</li>
               </ul>
             </div>
           </div>
