--- a/contactoo.html
+++ b/contactoo.html
@@ -64,7 +64,7 @@
   <div class="content">
     <div class="contact-wrapper animated bounceInUp">
       <div class="contact-form">
-        <h3 class="contactG">¡Gracias por visitar nuestra pagina web! <br>
+        <h3 class="contactG">¡Gracias por visitar nuestra página web! <br>
           Puede contactarnos por diferentes medios o bien déjenos sus datos y nos comunicaremos a la brevedad.
         </h3>
         <form action="">
@@ -99,15 +99,16 @@
       <div class="contact-info">
         <h4>Más Información:</h4>
         <ul>
-          <li><i class="fas fa-map-marker-alt"></i> CIUDAD DE PUEBLA</li>
-          <li><i class="fas fa-phone"></i> 81 29 51 82 22 <br> &nbsp &nbsp 222 887 6042</li>
+          <li><i class="fas fa-map-marker-alt"></i> &nbsp; Puebla-Mexico</li>
+          <li><i class="fas fa-phone"></i> &nbsp;  222 887 6042<br> 
           <li><i class="fas fa-envelope-open-text"></i> aclientes@cizzsolucionesconstructivas.com</li>
         </ul>
-        <p>Nuestra oficina se encuentra en la ciudad de Puebla. Sin embargo, tenemos cobertura en todo México </p>
+        <p>Nuestra oficina se encuentra en la ciudad de Puebla, sin embargo, tenemos cobertura a nivel nacional. </p>
       </div>
     </div>
 
   </div>
+
 
   <footer>
     <div class="main-content">
@@ -116,7 +117,9 @@
         <div class="content">
           <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
           <p>
-            TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR TRABAJOS EN TODO EL TERRITORIO NACIONAL
+          
+            Tenemos la capacidad de suministrar cualquier material y realizar trabajos en todo el territorio
+            nacional.
           </p>
           <div class="social">
             <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
@@ -139,10 +142,10 @@
             <ul>
               <li>Cubiertas</li>
               <li>Pisos</li>
-              <li>Extructuras</li>
-              <li>Especiales</li>
+              <li>Estructuras</li>
+              <li> Instalaciones especiales</li>
               <li>Venta de materiales </li>
-              <li>Asesorias</li>
+              <li>Asesorías</li>
             </ul>
           </div>
         </div>
