--- a/materiales.html
+++ b/materiales.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/index.css">
   <link rel="stylesheet" href="/css/contacto.css">
+  
   <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +60,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Aceros.jpg" alt="">
+        <img class="imgValor2" src="/img/metales.png" alt="">
       </div>
 
       <div class="materialdescripcion">
@@ -78,7 +79,7 @@
     </div>
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Cemento.jpg" alt="">
+        <img class="imgValor2" src="/img/Polvos.png" alt="">
       </div>
 
       <div class="materialdescripcion">
@@ -89,7 +90,7 @@
           <li>Mortero</li>
           <li>Cal</li>
           <li>Yeso</li>
-          <li>Pegazuulejos</li>
+          <li>Pega-azulejos</li>
 
         </ul>
       </div>
@@ -97,7 +98,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Grava.jpg" alt="">
+        <img class="imgValor2" src="/img/petreos.png" alt="">
       </div>
 
       <div class="materialdescripcion">
@@ -111,34 +112,34 @@
           <li>Block</li>
           <li>Tabique</li>
           <li>Cantera</li>
-          <li>Marmol</li>
+          <li>Mármol</li>
         </ul>
       </div>
     </div>
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/pinturas.png" alt="">
+        <img class="imgValor2" src="/img/Pintura.png" alt="">
       </div>
 
       <div class="materialdescripcion">
         <h5>Pinturas e impermeabilizantes</h5>
         <p>Encuentre con nosotros el producto ideal para su obra. Con la mejor calidad y precio. </p>
         <ul>
-          <li>Vinilica</li>
+          <li>Vinílica</li>
           <li>Esmaltes</li>
           <li>Poliuretanos</li>
-          <li>Epoxicos</li>
+          <li>Epóxicos</li>
         </ul>
       </div>
     </div>
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/PVC.jpg" alt="">
+        <img class="imgValor2" src="/img/tuberia.png" alt="">
       </div>
       <div class="materialdescripcion">
-        <h5>Tuberias</h5>
+        <h5>Tuberías</h5>
         <p>Variedad de tuberías para todo tipo de instalaciones.</p>
         <ul>
           <li>PVC</li>
@@ -151,7 +152,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Concreto.jpg" alt="">
+        <img class="imgValor2" src="/img/Concreto.png" alt="">
       </div>
       <div class="materialdescripcion">
         <h5>Concreto</h5>
@@ -168,7 +169,7 @@
   </div>
 
   <div class="Informacion">
-    <p>PODEMOS COTIZAR CUALQUIER MATERIAL PARA LA CONSTRUCCIÓN A PRECIOS COMPETITIVOS</p>
+    <p>PODEMOS COTIZAR CUALQUIER MATERIAL PARA LA CONSTRUCCIÓN A PRECIOS COMPETITIVOS.</p>
   </div>
 
   <div class="cotizar centrar ">
@@ -178,6 +179,7 @@
 
 
 
+ 
   <footer>
     <div class="main-content">
       <div class="left box">
@@ -185,7 +187,9 @@
         <div class="content">
           <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
           <p>
-            TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR TRABAJOS EN TODO EL TERRITORIO NACIONAL
+          
+            Tenemos la capacidad de suministrar cualquier material y realizar trabajos en todo el territorio
+            nacional.
           </p>
           <div class="social">
             <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
@@ -208,10 +212,10 @@
             <ul>
               <li>Cubiertas</li>
               <li>Pisos</li>
-              <li>Extructuras</li>
-              <li>Especiales</li>
+              <li>Estructuras</li>
+              <li> Instalaciones especiales</li>
               <li>Venta de materiales </li>
-              <li>Asesorias</li>
+              <li>Asesorías</li>
             </ul>
           </div>
         </div>
@@ -245,7 +249,6 @@
       </center>
     </div>
   </footer>
-
 
 </body>
 
