--- a/servicios.html
+++ b/servicios.html
@@ -8,6 +8,7 @@
   <title>Servicios</title>
   <link rel="stylesheet" href="/css/index.css" />
   <link rel="stylesheet" href="/css/contacto.css">
+  <link rel="stylesheet" href="/css/what.css" />
   <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,15 +55,15 @@
         <div class="servicio">
           <h3 id="cubiertas">Cubiertas</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 1.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 2.jpeg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 3.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 4.jpg" alt="Ciboertas" /></div>
           </div>
           <p>
             Las cubiertas son estructuras de cierre superior, su función principal es suministrar protección contra
-            todos los agentes externos. por su exposición directa a la intemperie necesita estar formada por materiales
-            de gran resistencia. En CIZZ tenemos las solución ideal para su cubierta, desde una pequeña losa hasta una
+            todos los agentes externos, por su exposición directa a la intemperie necesita estar formada por materiales
+            de gran resistencia. En CIZZ tenemos la solución ideal para su cubierta, desde una pequeña losa hasta una
             nave de grandes claros.
           </p>
 
@@ -81,10 +82,10 @@
         <div class="servicio">
           <h3 id="pisos">Pisos</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 1.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 2.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 3.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 4.jpg" alt="Ciboertas" /></div>
           </div>
           <p>
             El piso es la superficie inferior dispuesta horizontalmente en un espacio arquitectónico, es decir la base
@@ -108,10 +109,10 @@
         <div class="servicio">
           <h3 id="estructuras">Estructuras</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 1.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 2.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 3.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 4.png" alt="Ciboertas" /></div>
           </div>
           <p>
             La estructura es el conjunto de elementos conectados entre sí, que tiene la función de soportar esfuerzos,
@@ -125,8 +126,7 @@
             <li>Estructuras de acero</li>
             <li>Estructuras de concreto</li>
             <li>Prefabricados</li>
-            <li>Herreria</li>
-            <li>Arcotecho</li>
+            <li>Herrería</li>
             <li>Pasajuntas</li>
           </ul>
         </div>
@@ -134,19 +134,19 @@
 
       <section>
         <div class="servicio">
-          <h3 id="especiales">INSTALACIONES ESPECIALES</h3>
+          <h3 id="especiales">Instalaciones especiales</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/Cubierta.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/instalaciones 1.jpg" alt="Instalaciones" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/instalaciones 2.jpg" alt="Instalaciones" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/instalaciones 3.jpg" alt="Instalaciones" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/instalaciones 4.jpg" alt="Instalaciones" /></div>
           </div>
           <p>
             Las instalaciones son el conjunto de redes y equipos que permiten el suministro de servicios primordiales
             para el funcionamiento del edificio. Por otro lado, están las Instalaciones especiales que se refieren a
             todos los equipos, sistemas, tecnologías o dispositivos que complementan y mejoran el funcionamiento del
-            mismo. En CIZZ podemos dar soluciones a cualquier instalación, buscando siempre el buen funcionamiento del
-            inmueble, evitando riesgos y perdidas de recursos.
+            mismo. En CIZZ podemos dar solución  a cualquier instalación, buscando siempre el buen funcionamiento del
+            inmueble, evitando riesgos y perdida de recursos.
           </p>
 
           <ul>
@@ -161,73 +161,88 @@
       </section>
     </div>
   </main>
-  <footer>
-    <div class="main-content">
-      <div class="left box">
-        <h2>Nosotros</h2>
-        <div class="content">
-          <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
-          <p>
-            TENEMOS LA CAPACIDAD DE SUMINISTRAR CUALQUIER MATERIAL Y REALIZAR TRABAJOS EN TODO EL TERRITORIO NACIONAL
-          </p>
-          <div class="social">
-            <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
-              ><span class="fab fa-facebook-f"></span
-            ></a>
-            <a target="_blank" href="https://www.instagram.com/cizzsc/?hl=es"
-              ><span class="fab fa-instagram"></span
-            ></a>
-            <!-- <a target="_blank" href="#"
-              ><span class="fab fa-youtube"></span
-            ></a> -->
-          </div>
-        </div>
-      </div>
 
-      <div class="center box">
-        <div class="center box">
-          <h2>Servicios</h2>
-          <div class="content">
-            <ul>
-              <li>Cubiertas</li>
-              <li>Pisos</li>
-              <li>Extructuras</li>
-              <li>Especiales</li>
-              <li>Venta de materiales </li>
-              <li>Asesorias</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="center box">
-        <h2 id="footer">Contacto</h2>
-        <div class="content">
-          <div class="place">
-            <span class="fas fa-map-marker-alt"></span>
-            <span class="text">Puebla-Mexico</span>
-          </div>
-          <div class="phone">
-            <span class="fas fa-phone-alt"></span>
-            <span class="text">222 887 6042</span>
-          </div>
-          <div class="email">
-            <span class="fas fa-envelope"></span>
-            <span class="text"
-              >aclientes@cizzsolucionesconstructivas.com</span
-            >
-          </div>
+  <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+/>
+<a
+  href="https://api.whatsapp.com/send?phone=522216922167&text= Hola quisiera mas información"
+  class="float"
+  target="_blank"
+>
+  <i class="fa fa-whatsapp my-float"></i>
+</a>
+  
+<footer>
+  <div class="main-content">
+    <div class="left box">
+      <h2>Nosotros</h2>
+      <div class="content">
+        <img class="imagen" src="/Img/LOGO CIZZ.png" alt="Logo" />
+        <p>
+        
+          Tenemos la capacidad de suministrar cualquier material y realizar trabajos en todo el territorio
+          nacional.
+        </p>
+        <div class="social">
+          <a target="_blank" href="https://www.facebook.com/CIZZ-Soluciones-Constructivas-101513968902879"
+            ><span class="fab fa-facebook-f"></span
+          ></a>
+          <a target="_blank" href="https://www.instagram.com/cizzsc/?hl=es"
+            ><span class="fab fa-instagram"></span
+          ></a>
+          <!-- <a target="_blank" href="#"
+            ><span class="fab fa-youtube"></span
+          ></a> -->
         </div>
       </div>
     </div>
-    <div class="bottom">
-      <center>
-        <span class="credit"> Juan Florez <a href="#">PymeCode</a> | </span>
-        <span class="far fa-copyright"></span
-        ><span> 2021 Todos los derechos reservados.</span>
-      </center>
+
+    <div class="center box">
+      <div class="center box">
+        <h2>Servicios</h2>
+        <div class="content">
+          <ul>
+            <li>Cubiertas</li>
+            <li>Pisos</li>
+            <li>Estructuras</li>
+            <li> Instalaciones especiales</li>
+            <li>Venta de materiales </li>
+            <li>Asesorías</li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </footer>
+
+    <div class="center box">
+      <h2 id="footer">Contacto</h2>
+      <div class="content">
+        <div class="place">
+          <span class="fas fa-map-marker-alt"></span>
+          <span class="text">Puebla-Mexico</span>
+        </div>
+        <div class="phone">
+          <span class="fas fa-phone-alt"></span>
+          <span class="text">222 887 6042</span>
+        </div>
+        <div class="email">
+          <span class="fas fa-envelope"></span>
+          <span class="text"
+            >aclientes@cizzsolucionesconstructivas.com</span
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bottom">
+    <center>
+      <span class="credit"> Juan Florez <a href="#">PymeCode</a> | </span>
+      <span class="far fa-copyright"></span
+      ><span> 2021 Todos los derechos reservados.</span>
+    </center>
+  </div>
+</footer>
 
 </body>
 
