--- a/Index.html
+++ b/Index.html
@@ -94,7 +94,7 @@
           </p>
         </div>
       </div>
-      <div class="mision Contenedor">
+      <div class="vision Contenedor">
         <div class="misiondescription">
           <h2 class="centrar-texto">Visión</h2>
 
@@ -106,7 +106,7 @@
           </p>
         </div>
 
-        <div class="misionimg">
+        <div class="visionimg">
           <img src="/img/Vision.jpg" alt="Mision" />
         </div>
       </div>
