--- a/Index.html
+++ b/Index.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CIZZ</title>
+    <title>CIZZ- SOLUCIONES</title>
     <meta
       name="description"
       content="Somos una empresa joven que ambiciona progresar en el ámbito de la construcción,  partiendo de una premisa principal que es establecer  un vínculo con cada cliente"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/LOGO CIZZ.png">
+    
+     <!-- ---iconos---- -->
     <script
       src="https://kit.fontawesome.com/e760248e1d.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Roboto:wght@100;400&display=swap"
-      rel="stylesheet"
-    />
+    <!-- ----Fuentes---- -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap"/>
+    <link  href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Roboto:wght@100;400&display=swap" rel="stylesheet"  />
+      
+   
+    <!-- ----Hojas de estilo----  -->
     <link rel="stylesheet" href="/css/index.css" />
     <link rel="stylesheet" href="/css/contacto.css" />
     <link rel="stylesheet" href="/css/what.css" />
@@ -107,7 +106,7 @@
         </div>
 
         <div class="visionimg">
-          <img src="/img/Vision.jpg" alt="Mision" />
+          <img src="/img/Vision.jpg" alt="Vision" />
         </div>
       </div>
     </section>
@@ -129,8 +128,7 @@
             <img class="imgValor" src="/img/iconocalidad.png" alt="calidad" />
             <h5>Excelencia</h5>
             <p>
-              Calidad en todos nuestros materiales y servicios. Colaboramos solo
-              con los mejores proveedores.
+              Calidad en todos nuestros materiales y servicios.
             </p>
           </div>
         </div>
