--- a/materiales.html
+++ b/materiales.html
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/index.css">
+  <title>Materiales</title>
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/LOGO CIZZ.png">
+  <!-- ----Hojas de estilos---- -->
+  <link rel="stylesheet" href="/css/index.css" />
   <link rel="stylesheet" href="/css/contacto.css">
-  
+  <!-- ----Iconos---- -->
   <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
+  <!-- ----Fuentes---- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Roboto:wght@100;400&display=swap"
     rel="stylesheet">
-  <title>Materiales</title>
 </head>
 
 <body>
@@ -49,8 +53,8 @@
     <div class="seven">
       <h1>Materiales</h1>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione esse suscipit impedit obcaecati tempora cum
-      doloremque quam maxime quisquam, corrupti possimus quia veritatis labore excepturi magni est voluptate omnis quos.
+    <p>
+      Tenemos todo lo necesario en materiales de construcción para tu obra.
     </p>
 
   </div>
@@ -60,7 +64,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/metales.png" alt="">
+        <img class="imgValor2" src="/img/metales.png" alt="Metales" />
       </div>
 
       <div class="materialdescripcion">
@@ -79,7 +83,7 @@
     </div>
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Polvos.png" alt="">
+        <img class="imgValor2" src="/img/Polvos.png" alt="Polvos">
       </div>
 
       <div class="materialdescripcion">
@@ -98,7 +102,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/petreos.png" alt="">
+        <img class="imgValor2" src="/img/petreos.png" alt="Petreos">
       </div>
 
       <div class="materialdescripcion">
@@ -119,7 +123,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Pintura.png" alt="">
+        <img class="imgValor2" src="/img/Pintura.png" alt="Pintura">
       </div>
 
       <div class="materialdescripcion">
@@ -136,7 +140,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/tuberia.png" alt="">
+        <img class="imgValor2" src="/img/tuberia.png" alt="tuberia">
       </div>
       <div class="materialdescripcion">
         <h5>Tuberías</h5>
@@ -152,7 +156,7 @@
 
     <div class="material">
       <div class="materialimg">
-        <img class="imgValor2" src="/img/Concreto.png" alt="">
+        <img class="imgValor2" src="/img/Concreto.png" alt="Concreto">
       </div>
       <div class="materialdescripcion">
         <h5>Concreto</h5>
