--- a/servicios.html
+++ b/servicios.html
@@ -6,10 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Servicios</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/LOGO CIZZ.png">
+  <!-- ----Hojas de estilos---- -->
   <link rel="stylesheet" href="/css/index.css" />
   <link rel="stylesheet" href="/css/contacto.css">
   <link rel="stylesheet" href="/css/what.css" />
+  <!-- ----Iconos---- -->
   <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
+  <!-- ----Fuentes---- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Roboto:wght@100;400&display=swap"
@@ -51,14 +55,14 @@
       <h1>Servicios</h1>
     </div>
     <div class="servicios">
-      <section>
+      <section >
         <div class="servicio">
           <h3 id="cubiertas">Cubiertas</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 1.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 2.jpeg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 3.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 4.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 1.jpg" alt="Cubiertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 2.jpeg" alt="Cubiertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 3.jpg" alt="Cubiertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/cubiertas 4.jpg" alt="Cubiertas" /></div>
           </div>
           <p>
             Las cubiertas son estructuras de cierre superior, su función principal es suministrar protección contra
@@ -78,14 +82,14 @@
         </div>
       </section>
 
-      <section>
+      <section >
         <div class="servicio">
           <h3 id="pisos">Pisos</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 1.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 2.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 3.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 4.jpg" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 1.jpg" alt="Pisos" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 2.jpg" alt="Pisos" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 3.jpg" alt="Pisos" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/pisos 4.jpg" alt="Pisos" /></div>
           </div>
           <p>
             El piso es la superficie inferior dispuesta horizontalmente en un espacio arquitectónico, es decir la base
@@ -105,14 +109,14 @@
         </div>
       </section>
 
-      <section>
+      <section >
         <div class="servicio">
           <h3 id="estructuras">Estructuras</h3>
           <div class="imgWrapper4">
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 1.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 2.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 3.jpg" alt="Ciboertas" /></div>
-            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 4.png" alt="Ciboertas" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 1.jpg" alt="Estructura" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 2.jpg" alt="Estructura" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 3.jpg" alt="Estructura" /></div>
+            <div class="imgResponsiva"><img class="imgServicio" src="/img/estructuras 4.png" alt="Estructura" /></div>
           </div>
           <p>
             La estructura es el conjunto de elementos conectados entre sí, que tiene la función de soportar esfuerzos,
@@ -132,7 +136,7 @@
         </div>
       </section>
 
-      <section>
+      <section >
         <div class="servicio">
           <h3 id="especiales">Instalaciones especiales</h3>
           <div class="imgWrapper4">
