--- a/asesoria.html
+++ b/asesoria.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/index.css">
+  <title>Asesoría</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/LOGO CIZZ.png">
+  <!-- ----Hojas de estilos---- -->
+  <link rel="stylesheet" href="/css/index.css" />
   <link rel="stylesheet" href="/css/contacto.css">
   <link rel="stylesheet" href="/css/what.css" />
+  <!-- ----Iconos---- -->
   <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
-  <title>Asesoria</title>
-  <script src="https://kit.fontawesome.com/e760248e1d.js" crossorigin="anonymous"></script>
+  <!-- ----Fuentes---- -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Roboto:wght@100;400&display=swap"
