--- a/contactoo.html
+++ b/contactoo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contactanos</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/LOGO CIZZ.png">
 
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/css/index.css" />
